Type handling for Json Download

--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
@@ -68,7 +68,8 @@
           <app-object-view *ngIf="parsedInstance" [schema]="schema"
                            [selectable]="true"
                            (instanceClicked)="onInstanceClicked($event)"
-                           (downloadParsedDataClicked)="onDownloadParsedDataClicked($event)"
+                           (downloadParsedDataClicked)="onDownloadParsedDataClicked()"
+                           (downloadTypedParsedDataClicked)="onDownloadTypedParsedDataClicked()"
                            [instance]="typeNamedInstance"></app-object-view>
         </div>
       </mat-tab>
