--- a/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
+++ b/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
@@ -4,8 +4,16 @@
           class="downloadParsedDataButton">Download
   </button>
   <mat-menu #menu="matMenu">
-    <button mat-menu-item (click)="downloadParsedData($event, downloadFileType.JSON)">as JSON</button>
-    <button mat-menu-item (click)="downloadParsedData($event, downloadFileType.CSV)">as CSV</button>
+    <mat-radio-group>
+      <mat-radio-button [checked] ="isTypeInfoIncluded" value="TypeIncluded" (change)="handleRadio($event)"
+                        (click)="$event.stopPropagation()" style="padding-left: 20px; padding-bottom: 10px">
+        Include type info
+      </mat-radio-button>
+      <mat-radio-button [checked] ="!isTypeInfoIncluded" value="TypeExcluded" (change)="handleRadio($event)"
+                        (click)="$event.stopPropagation()" style="padding-left: 20px">Exclude type info
+      </mat-radio-button>
+    </mat-radio-group>
+    <button mat-menu-item (click)="downloadParsedData()">Download as JSON</button>
   </mat-menu>
 </div>
 <div class="typed-value-container" *ngIf="isPrimitive" (click)="onTopLevelPrimitiveClicked()"
