--- a/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/call-explorer/call-explorer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/call-explorer/call-explorer.component.scss
@@ -63,3 +63,9 @@ app-operation-view {
 .chart-container {
   width: 100%;
 }
+
+.download-remote-call-button{
+  float: right;
+  right: 0.4rem;
+  top: 0.4rem;
+}
