--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
@@ -21,6 +21,7 @@
                              (fileDataSourceChanged)="onFileSelected($event)"
                              (selectedTypeChanged)="contentType = $event"
                              (csvOptionsChanged)="onCsvOptionsChanged($event)"
+                             (xmlOptionsChanged)="onXmlOptionsChanged($event)"
     ></app-data-source-toolbar>
 
     <div class="result-status error-display" *ngIf="parserErrorMessage">
@@ -43,6 +44,7 @@
                       [caskServiceUrl]="caskServiceUrl"
                       [contents]="fileContents"
                       [targetTypeName]="contentType.name.fullyQualifiedName"
+                      [xmlIngestionParameters]="xmlIngestionParameters"
       ></app-cask-panel>
     </div>
     <mat-tab-group animationDuration="250ms"
