--- a/vyne-query-service/src/main/web/src/theme-colors.scss
+++ b/vyne-query-service/src/main/web/src/theme-colors.scss
@@ -16,6 +16,8 @@ $red-1: #e53935;
 $red-light: #f77172;
 $red-dark: #ab000d;
 
+$vyne-yellow: #f5d326;
+
 $green: #16aa6d;
 
 $whiteish: #F5F7F9;
@@ -46,6 +48,10 @@ $dark-blue-1: #1d2539;
 //$dark-blue-1: #171F46;
 
 $blueish: #afdfff;
+
+$bg-info: rgba($blueish, 0.3);
+$bg-warn: #f5ab26;
+$bg-error: $red-light;
 
 $vyne-purple: #5160ff;
 $vyne-lilac: #7d73b1;
