improve use of ag grid in results displays

--- a/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
+++ b/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
@@ -1,6 +1,6 @@
-<div class="top-level">
-  <div class="type-name " *ngIf="topLevel">{{ type?.name.name }}</div>
-</div>
+<!--<div class="top-level">-->
+<!--  <div class="type-name " *ngIf="topLevel">{{ type?.name.name }}</div>-->
+<!--</div>-->
 <div class="typed-value-container" *ngIf="isPrimitive" (click)="onTopLevelPrimitiveClicked()"
      [class.selectable]="selectable"
 >
