--- a/vyne-query-service/src/main/web/src/styles.scss
+++ b/vyne-query-service/src/main/web/src/styles.scss
@@ -4,7 +4,16 @@
 @import "../node_modules/ag-grid-community/src/styles/ag-theme-alpine/sass/ag-theme-alpine-mixin.scss";
 
 .ag-theme-alpine {
-  @include ag-theme-alpine();
+  @include ag-theme-alpine((
+    font-family: ($font-sans),
+    border-color: $border-dark
+  ));
+  .ag-header-cell-text {
+    font-family: $mono;
+    color: $dark-grey-1;
+    font-size: 1rem;
+    font-weight: 400;
+  }
 }
 
 html, body {
