--- a/vyne-query-service/src/main/web/src/app/object-view/object-view.component.scss
+++ b/vyne-query-service/src/main/web/src/app/object-view/object-view.component.scss
@@ -29,8 +29,6 @@
 }
 
 .type-name {
-  //@include mat-elevation(1);
-
   font-family: $mono;
   color: $vyne-lilac;
   float: left;
@@ -79,7 +77,7 @@
     display: table-row;
 
     &:not(:last-child) {
-      border-bottom: 1px solid $light-grey-2;
+      border-bottom: 1px solid $border-dark;
     }
 
     &.object-row {
