--- a/vyne-query-service/src/main/web/src/app/query-panel/result-display/result-container.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/result-display/result-container.component.html
@@ -24,36 +24,37 @@
   </div>
 
   <div class="results-container">
-    <mat-tab-group>
-      <mat-tab label="Table">
-        <div *ngFor="let resultTypeName of queryResultTypeNames">
-          <app-results-table [instance]="getResultForTypeName(resultTypeName)"
-                             [schema]="schema"
-                             [selectable]="true"
-                             [type]="getTypeIfNotIncluded(resultTypeName)"
-                             (instanceClicked)="instanceClicked($event)"></app-results-table>
-        </div>
-      </mat-tab>
-      <mat-tab label="Result">
-        <div *ngFor="let resultTypeName of queryResultTypeNames">
+    <div *ngFor="let resultTypeName of queryResultTypeNames">
+      <app-object-view-container [instance]="getResultForTypeName(resultTypeName)"
+                                 [schema]="schema"
+                                 [selectable]="true"
+                                 [type]="getTypeIfNotIncluded(resultTypeName)"
+                                 (instanceClicked)="instanceClicked($event)"></app-object-view-container>
+    </div>
+<!--    <mat-tab-group>-->
+<!--      <mat-tab label="Table">-->
+<!--        -->
+<!--      </mat-tab>-->
+<!--      <mat-tab label="Result">-->
+<!--        <div *ngFor="let resultTypeName of queryResultTypeNames">-->
 
-          <app-object-view [instance]="getResultForTypeName(resultTypeName)"
-                           [schema]="schema"
-                           [selectable]="true"
-                           [type]="getTypeIfNotIncluded(resultTypeName)"
-                           (instanceClicked)="instanceClicked($event)"
-          ></app-object-view>
-        </div>
-      </mat-tab>
-      <mat-tab label="Json">
-        <div *ngFor="let resultTypeName of queryResultTypeNames" class="result-card">
+<!--          <app-object-view [instance]="getResultForTypeName(resultTypeName)"-->
+<!--                           [schema]="schema"-->
+<!--                           [selectable]="true"-->
+<!--                           [type]="getTypeIfNotIncluded(resultTypeName)"-->
+<!--                           (instanceClicked)="instanceClicked($event)"-->
+<!--          ></app-object-view>-->
+<!--        </div>-->
+<!--      </mat-tab>-->
+<!--      <mat-tab label="Json">-->
+<!--        <div *ngFor="let resultTypeName of queryResultTypeNames" class="result-card">-->
 
-          <app-simple-code-viewer name="Json" [content]="getResultForTypeName(resultTypeName)"
-                                  lang="json"></app-simple-code-viewer>
-        </div>
-      </mat-tab>
+<!--          <app-simple-code-viewer name="Json" [content]="getResultForTypeName(resultTypeName)"-->
+<!--                                  lang="json"></app-simple-code-viewer>-->
+<!--        </div>-->
+<!--      </mat-tab>-->
 
-    </mat-tab-group>
+<!--    </mat-tab-group>-->
 
     <app-call-explorer *ngIf="showMermaid" [queryResult]="result"></app-call-explorer>
   </div>
