--- a/vyne-query-service/src/main/web/src/theme.scss
+++ b/vyne-query-service/src/main/web/src/theme.scss
@@ -49,3 +49,12 @@ $light-grey-1: mat-color($vyne-grey-blue-palette, 50);
 $light-grey-2: mat-color($vyne-grey-blue-palette, 100);
 $light-grey-3: mat-color($vyne-grey-blue-palette, 200);
 
+$border-dark: $light-grey-2;
+$borer-light: $light-purple-grey-300;
+$border-highlight: rgba($vyne-lilac,0.6);
+
+//background-color: rgba($vyne-lilac, 0.1);
+
+//  color: $vyne-lilac;
+//  border: 1px solid rgba($vyne-lilac,0.6);
+//  background-color: rgba($vyne-lilac, 0.1);
