standardize result display in data explorer

--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
@@ -76,10 +76,10 @@
           </mat-menu>
         </div>
         <div class="object-view-wrapper">
-          <app-object-view *ngIf="parsedInstance" [schema]="schema"
+          <app-object-view-container *ngIf="parsedInstance" [schema]="schema"
                            [selectable]="true"
                            (instanceClicked)="onInstanceClicked($event)"
-                           [instance]="typeNamedInstance"></app-object-view>
+                           [instance]="typeNamedInstance"></app-object-view-container>
         </div>
       </mat-tab>
     </mat-tab-group>
