--- a/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.scss
@@ -13,7 +13,8 @@
   margin-top: 1rem;
 }
 
-.query-editor-container{
+.query-wizard-container {
+  margin: 1rem;
 }
 
 :host ::ng-deep .mat-tab-body-wrapper {
