--- a/vyne-query-service/src/main/web/src/code-formatter-theme.scss
+++ b/vyne-query-service/src/main/web/src/code-formatter-theme.scss
@@ -3,7 +3,8 @@
 $code-background: #333f54;
 //$code-background: #002b36;
 $code-base: rgba(255,255,255,0.85);
-$code-viewer-tooling-background: #1d2539;
+$code-viewer-tooling-background: #252b3a;
+//$code-viewer-tooling-background: #1d2539;
 $code-highlight: $vyne-primary;
 
 $dark-list-item: rgba($code-base,0.7);
