--- a/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
@@ -16,42 +16,48 @@
     </div>
   </mat-drawer>
 
-  <div class="page-content" style="z-index: 0">
+  <div class="full-width-page-content" style="z-index: 0">
     <div class="container">
 
       <mat-tab-group mat-align-tabs="start" style="height: 100%" [(selectedIndex)]="selectedIndex">
         <mat-tab label="Query Builder">
-          <query-wizard (queryResultUpdated)="resultUpdated($event)"
-                        (loadingChanged)="onLoadingChanged($event)"
-          ></query-wizard>
+          <ng-template matTabContent>
+            <div class="query-wizard-container">
+              <query-wizard (queryResultUpdated)="resultUpdated($event)"
+                            (loadingChanged)="onLoadingChanged($event)"
+              ></query-wizard>
+              <div class="row">
+                <div class="results-container">
+                  <mat-spinner *ngIf="loading" [diameter]=40></mat-spinner>
+
+
+                  <mat-card *ngIf="lastQueryResult" style="width: 100%">
+                    <mat-card-header>
+                      <mat-card-title>Results</mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content>
+                      <query-result-container [result]="lastQueryResult"
+                                              (instanceSelected)="onInstanceSelected($event)"></query-result-container>
+                    </mat-card-content>
+                  </mat-card>
+                </div>
+              </div>
+            </div>
+          </ng-template>
         </mat-tab>
         <mat-tab label="Query Editor">
-          <div class=query-editor-container>
-            <query-editor
-              [initialQuery]="routeQuery"
-              (queryResultUpdated)="resultUpdated($event)"
-              (loadingChanged)="onLoadingChanged($event)"
-            ></query-editor>
-          </div>
+          <ng-template matTabContent>
+            <div class=query-editor-container>
+              <query-editor
+                [initialQuery]="routeQuery"
+                (queryResultUpdated)="resultUpdated($event)"
+                (loadingChanged)="onLoadingChanged($event)"
+                (instanceSelected)="onInstanceSelected($event)"
+              ></query-editor>
+            </div>
+          </ng-template>
         </mat-tab>
       </mat-tab-group>
-
-    </div>
-    <div class="row">
-      <div class="results-container">
-        <mat-spinner *ngIf="loading" [diameter]=40></mat-spinner>
-
-
-        <mat-card *ngIf="lastQueryResult" style="width: 100%">
-          <mat-card-header>
-            <mat-card-title>Results</mat-card-title>
-          </mat-card-header>
-          <mat-card-content>
-            <query-result-container [result]="lastQueryResult"
-                                    (instanceSelected)="onInstanceSelected($event)"></query-result-container>
-          </mat-card-content>
-        </mat-card>
-      </div>
     </div>
   </div>
 </mat-sidenav-container>
