--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -11,7 +11,17 @@
   >
   </app-query-editor-bottom-bar>
 </div>
-
+<div class="unmatched-nodes-alert" *ngIf="lastQueryResult?.unmatchedNodes?.length > 0">
+  <img src="assets/img/no-path.svg">
+  <div>
+    <span>Vyne wasn't able to find a way to load the following type(s):</span>
+    <ul>
+      <li *ngFor="let name of lastQueryResult?.unmatchedNodes">{{name.longDisplayName}}</li>
+    </ul>
+    <span>This can happen if there's no service running which returns this data. If you specified criteria for this type,
+    then a service must also accept those inputs as parameters in order to be called.</span>
+  </div>
+</div>
 <app-tabbed-results-view *ngIf="lastQueryResult"
                          [result]="lastQueryResult"
                          (instanceSelected)="instanceSelected.emit($event)"
