--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.scss
@@ -4,13 +4,37 @@
   width: 100%;
   flex: 1;
 
-  &:not(:last-child) {
-    padding-right: 45px;
-  }
+  // Why was this here?  Next time I read this message, remove it
+  //&:not(:last-child) {
+  //  padding-right: 45px;
+  //}
 }
 
 .mat-tab-header {
   border-bottom: 0px;
+}
+
+$warning: #DD8902;
+.unmatched-nodes-alert {
+  display: flex;
+  background-color: rgba($warning, 0.15);
+  border: 2px solid rgba($warning, 0.8);
+  margin: 1rem;
+  border-radius: 4px;
+  color: darken($warning, 20%);
+  padding: 1rem;
+  align-items: center;
+  font-size: 0.9rem;
+
+  ul {
+    margin: 0.5rem 0;
+  }
+
+  img {
+    width: 48px;
+    margin-right: 1.5rem;
+  }
+
 }
 
 .code-viewer-container {
@@ -50,4 +74,11 @@
   margin-bottom: 3px;
 }
 
+app-query-editor-bottom-bar {
+  display: block;
+  width: 100%;
+  // Overflow hidden because the ngx-monaco editor is causing width sizing
+  // issues, which can incorrectly trigger horizontal scrollbars appearing
+  overflow-x: hidden;
+}
 
