move history view to master/detail

--- a/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
@@ -19,23 +19,7 @@
     </div>
   </mat-drawer>
   <div class="container">
-    <div class="list-container">
-      <div class="history-item" *ngFor="let historyRecord of history" (click)="setActiveRecord(historyRecord)">
-        <div [ngSwitch]="queryType(historyRecord)">
-          <div *ngSwitchCase="'RestfulQuery'">
-            <app-restful-record [expressionTypeName]="expressionTypeName(historyRecord)"
-                                [historyRecord]="historyRecord"
-                                [factTypeNames]="getFactTypeNames(historyRecord)"></app-restful-record>
-          </div>
-          <div *ngSwitchCase="'VyneQlQuery'">
-            <app-vyneql-record [historyRecord]="historyRecord">
-
-            </app-vyneql-record>
-          </div>
-
-        </div>
-      </div>
-    </div>
+    <app-query-list [historyRecords]="history" (recordSelected)="setActiveRecord($event)"></app-query-list>
     <div class="results-section">
       <div class="results-container">
 
