--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -18,8 +18,14 @@
     <ul>
       <li *ngFor="let name of lastQueryResultAsSuccess?.unmatchedNodes">{{name.longDisplayName}}</li>
     </ul>
-    <span>This can happen if there's no service running which returns this data. If you specified criteria for this type,
-    then a service must also accept those inputs as parameters in order to be called.</span>
+    <span>This can happen:
+      <ul>
+       <li>
+         if there's no service running which returns this data. If you specified criteria for this type,
+         then a service must also accept those inputs as parameters in order to be called. Goto Schema Explorer and check relevant Cask service schemas.</li>
+        <li>If the filter criteria values (e.g. date ranges) that you pass into your query are invalid. Make sure that relevant cask(s) have data for given filters. </li>
+    </ul>
+    </span>
   </div>
 </div>
 <app-tabbed-results-view *ngIf="lastQueryResult"
