further ui freactorings to improve performance.  disabled verbose mode by default, as was causing ui to crash

--- a/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
@@ -20,14 +20,11 @@
   </mat-drawer>
   <div class="container">
     <app-query-list [historyRecords]="history" (recordSelected)="setActiveRecord($event)"></app-query-list>
-    <div class="results-section">
-      <div class="results-container">
-
-          <query-result-container [result]="activeRecord?.response"
-                                  [activeRecord]="activeRecord"
-                                  (instanceSelected)="onInstanceSelected($event)"
-          ></query-result-container>
-      </div>
+    <div class="results-section" *ngIf="activeRecord">
+      <app-tabbed-results-view
+        [result]="activeRecord?.response"
+        (downloadClicked)="downloadQueryHistory($event)"
+        (instanceSelected)="onInstanceSelected($event)"></app-tabbed-results-view>
     </div>
 
   </div>
