--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/tabbed-results-view.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/tabbed-results-view.component.scss
@@ -2,6 +2,12 @@
 
 .results-container {
   margin: 1rem;
+  height: 100%;
+}
+.results-object-view-list-block {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .empty-results {
