--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.scss
@@ -50,7 +50,7 @@ $warning: #DD8902;
   width: 100%;
   display: flex;
   flex-direction: column;
-  height: 100px;
+  min-height: 120px;
 
   .code-editor {
 
