made code editor in query editor resizable, fixed some errant scrollbars

--- a/vyne-query-service/src/main/web/src/app/object-view/object-view-container.component.scss
+++ b/vyne-query-service/src/main/web/src/app/object-view/object-view-container.component.scss
@@ -9,7 +9,7 @@ img.icon {
 }
 .container {
   height: 100%;
-  min-height: 250px;
+  //min-height: 250px;
   display: flex;
   flex-direction: column;
 }
