--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -1,24 +1,27 @@
-<div class="container">
-  <div class="code-viewer-container">
-    <ngx-monaco-editor [options]="editorOptions" class="code-editor" [(ngModel)]="query" #editor>
-    </ngx-monaco-editor>
-  </div>
+<as-split direction="vertical" unit="pixel">
+  <as-split-area [size]="220">
+    <div class="code-editor-section">
+      <div class="code-viewer-container">
+        <ngx-monaco-editor [options]="editorOptions" class="code-editor" [(ngModel)]="query" #editor>
+        </ngx-monaco-editor>
+      </div>
 
-  <app-query-editor-bottom-bar
-    (executeQuery)="submitQuery()"
-    [currentState]="currentState"
-    [error]="lastErrorMessage"
-  >
-  </app-query-editor-bottom-bar>
-</div>
-<div class="unmatched-nodes-alert" *ngIf="lastQueryResultAsSuccess?.unmatchedNodes?.length > 0">
-  <img src="assets/img/no-path.svg">
-  <div>
-    <span>Vyne wasn't able to find a way to load the following type(s):</span>
-    <ul>
-      <li *ngFor="let name of lastQueryResultAsSuccess?.unmatchedNodes">{{name.longDisplayName}}</li>
-    </ul>
-    <span>This can happen:
+      <app-query-editor-bottom-bar
+        (executeQuery)="submitQuery()"
+        [currentState]="currentState"
+        [error]="lastErrorMessage"
+      >
+      </app-query-editor-bottom-bar>
+    </div>
+
+    <div class="unmatched-nodes-alert" *ngIf="lastQueryResultAsSuccess?.unmatchedNodes?.length > 0">
+      <img src="assets/img/no-path.svg">
+      <div>
+        <span>Vyne wasn't able to find a way to load the following type(s):</span>
+        <ul>
+          <li *ngFor="let name of lastQueryResultAsSuccess?.unmatchedNodes">{{name.longDisplayName}}</li>
+        </ul>
+        <span>This can happen:
       <ul>
        <li>
          if there's no service running which returns this data. If you specified criteria for this type,
@@ -26,10 +29,17 @@
         <li>If the filter criteria values (e.g. date ranges) that you pass into your query are invalid. Make sure that relevant cask(s) have data for given filters. </li>
     </ul>
     </span>
-  </div>
-</div>
-<app-tabbed-results-view *ngIf="lastQueryResult"
-                         [result]="lastQueryResult"
-                         (instanceSelected)="instanceSelected.emit($event)"
-                         (downloadClicked)="downloadQueryHistory($event.format)"
-></app-tabbed-results-view>
+      </div>
+    </div>
+  </as-split-area>
+  <as-split-area size="*">
+    <app-tabbed-results-view *ngIf="lastQueryResult"
+                             [result]="lastQueryResult"
+                             (instanceSelected)="instanceSelected.emit($event)"
+                             (downloadClicked)="downloadQueryHistory($event.format)"
+    ></app-tabbed-results-view>
+
+  </as-split-area>
+</as-split>
+
+
