--- a/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.scss
@@ -20,10 +20,15 @@ mat-sidenav-container {
 
 .results-container {
   margin-top: 1rem;
+  flex-grow: 1;
+  min-height: 300px;
 }
 
 .query-wizard-container {
   margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 :host ::ng-deep .mat-tab-body-wrapper {
