lineage display now working again

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
@@ -11,7 +11,7 @@
         [instance]="selectedTypeInstance"
         (hasTypedInstanceDrawerClosed)="onCloseTypedInstanceDrawer($event)"
         [type]="selectedTypeInstanceType"
-        [lineageGraph]="lineageGraph"
+        [dataSource]="selectedTypeInstanceDataSource"
       ></app-typed-instance-panel-container>
     </div>
   </mat-drawer>
