--- a/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
@@ -14,7 +14,7 @@
         [instance]="selectedTypeInstance"
         (hasTypedInstanceDrawerClosed)="onCloseTypedInstanceDrawer($event)"
         [type]="selectedTypeInstanceType"
-        [lineageGraph]="activeRecord?.response?.lineageGraph"
+        [dataSource]="selectedTypeInstanceDataSource"
       ></app-typed-instance-panel-container>
     </div>
   </mat-drawer>
