--- a/vyne-query-service/src/main/web/src/app/cask-viewer/cask-details.component.html
+++ b/vyne-query-service/src/main/web/src/app/cask-viewer/cask-details.component.html
@@ -17,9 +17,11 @@
     <mat-card class="detail"> <div><b>Type</b></div> {{caskConfig.qualifiedTypeName}}</mat-card>
     <mat-card class="detail"> <div><b>Created at</b></div> {{caskConfig.insertedAt | date: 'medium'}}</mat-card>
     <mat-card class="detail"> <div><b>Number of records</b></div> {{caskConfig.details.recordsNumber}}</mat-card>
+    <mat-card class="detail"> <div><b>Number of Ingestion Errors</b></div> <div>(last 24 hours)</div> {{caskConfig.details.ingestionErrorsInLast24Hours}}</mat-card>
   </div>
 
   <app-cask-source-viewer [sources]="sources"></app-cask-source-viewer>
+  <app-cask-ingestion-errors [caskConfigRecord]="caskConfig"></app-cask-ingestion-errors>
 </div>
 
 
