--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
@@ -30,9 +30,12 @@
     margin-bottom: 0;
     font-weight: 700;
   }
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
+.tags-display {
+  margin-bottom: 1rem;
+}
 app-type-link-graph-container {
   display: block;
   width: 100%;
