--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -13,26 +13,10 @@
       >
       </app-query-editor-bottom-bar>
     </div>
-
-    <div class="unmatched-nodes-alert" *ngIf="lastQueryResultAsSuccess?.unmatchedNodes?.length > 0">
-      <img src="assets/img/no-path.svg">
-      <div>
-        <span>Vyne wasn't able to find a way to load the following type(s):</span>
-        <ul>
-          <li *ngFor="let name of lastQueryResultAsSuccess?.unmatchedNodes">{{name.longDisplayName}}</li>
-        </ul>
-        <span>This can happen:
-      <ul>
-       <li>
-         if there's no service running which returns this data. If you specified criteria for this type,
-         then a service must also accept those inputs as parameters in order to be called. Goto Schema Explorer and check relevant Cask service schemas.</li>
-        <li>If the filter criteria values (e.g. date ranges) that you pass into your query are invalid. Make sure that relevant cask(s) have data for given filters. </li>
-    </ul>
-    </span>
-      </div>
-    </div>
   </as-split-area>
   <as-split-area size="*">
+    <app-error-panel *ngIf="lastQueryResultAsSuccess?.unmatchedNodes?.length > 0" [queryResult]="lastQueryResultAsSuccess">
+    </app-error-panel>
     <app-tabbed-results-view *ngIf="lastQueryResult"
                              [result]="lastQueryResult"
                              (instanceSelected)="instanceSelected.emit($event)"
